feat(api): update api doc
