# app/api/appapi/swagger/appapi_docs.go
@@ -1,4 +1,4 @@
-// Code generated by swaggo/swag at 2023-08-17 22:21:32.9180586 +0800 CST m=+3.724341101. DO NOT EDIT.
+// Code generated by swaggo/swag at 2023-08-19 10:40:01.160814 +0800 CST m=+3.904792901. DO NOT EDIT.
 
 package swagger
 
@@ -32,7 +32,7 @@ const docTemplateappapi = `{
                 "parameters": [
                     {
                         "description": "comment",
-                        "name": "name",
+                        "name": "loginBody",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -40,6 +40,19 @@ const docTemplateappapi = `{
                         }
                     }
                 ],
+                "responses": {}
+            }
+        },
+        "/auth/logout": {
+            "delete": {
+                "description": "user logout",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "system/auth"
+                ],
+                "summary": "user logout api",
                 "responses": {}
             }
         },
@@ -58,27 +71,41 @@ const docTemplateappapi = `{
                 "summary": "user register api",
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "comment",
-                        "name": "name",
+                        "name": "registerBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.RegisterRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/email/code": {
+            "get": {
+                "description": "auth code email api",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "system/email"
+                ],
+                "summary": "auth code email api",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "email",
+                        "name": "email",
                         "in": "query",
                         "required": true
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "comment",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "comment",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
+                "responses": {}
             }
         },
         "/ping": {
@@ -103,44 +130,7 @@ const docTemplateappapi = `{
                         "required": true
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "success",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/resp.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "string"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "400": {
-                        "description": "bad parameter",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/resp.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "string"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    }
-                }
+                "responses": {}
             }
         }
     },
@@ -156,22 +146,19 @@ const docTemplateappapi = `{
                 }
             }
         },
-        "resp.Response": {
+        "request.RegisterRequest": {
             "type": "object",
             "properties": {
                 "code": {
-                    "description": "custom Code",
-                    "type": "integer"
-                },
-                "data": {
-                    "description": "response Data"
-                },
-                "error": {
-                    "description": "response Error",
                     "type": "string"
                 },
-                "msg": {
-                    "description": "response mgs",
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
